# delivery-carrier

./: .copier-answers.yml  .coveragerc  .gitattributes  .pre-commit-config.yaml  .travis.yml  README.md  oca_dependencies.txt  requirements.txt  test-requirements.txt
base_delivery_carrier_extensions/: README.rst  __manifest__.py
base_delivery_carrier_file/: README.rst  __init__.py
base_delivery_carrier_files/: README.md  README.rst  __init__.py  __manifest__.py  __openerp__.py  carrier_file.py  carrier_file_demo.xml  carrier_file_demo.yml  carrier_file_view.xml  sql_db.py  stock.py  stock_view.xml
base_delivery_carrier_files_document/: README.rst  __init__.py  __manifest__.py  __openerp__.py  carrier_file.py  carrier_file_view.xml
base_delivery_carrier_files_document_unported/: __openerp__.py  carrier_file_demo.xml
base_delivery_carrier_files_grouped/: __init__.py  __manifest__.py
base_delivery_carrier_files_unported/: __openerp__.py  carrier_file_view.xml
base_delivery_carrier_label/: README.rst  __init__.py  __manifest__.py  __openerp__.py  carrier_account.py  carrier_account_view.xml  delivery.py  delivery_view.xml  reports.xml  res_config_view.xml  stock.py  stock_view.xml
base_delivery_carrier_label_direct_print/: README.rst  __init__.py  __manifest__.py
base_delivery_carrier_label_unported/: __init__.py  __openerp__.py
carrier_account_environment/: README.rst  __manifest__.py
carrier_deutsche_post/: README.rst  __manifest__.py
carrier_environment/: __manifest__.py
carrier_states/: README.rst  __manifest__.py
connector_routific/: README.rst  __manifest__.py
delivery_auto_refresh/: README.rst  __manifest__.py  utils.py
delivery_automatic_package/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+3616 files in other folders)
