[project]
name = "odoo-addons-oca-delivery-carrier"
version = "17.0.20240904.0"
dependencies = [
    "odoo-addon-base_delivery_carrier_label>=17.0dev,<17.1dev",
    "odoo-addon-delivery_carrier_account>=17.0dev,<17.1dev",
    "odoo-addon-delivery_carrier_info>=17.0dev,<17.1dev",
    "odoo-addon-delivery_roulier>=17.0dev,<17.1dev",
    "odoo-addon-delivery_roulier_option>=17.0dev,<17.1dev",
    "odoo-addon-delivery_state>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_warehouse_from_delivery_carrier>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
